week3-4starting code
