# routes/contacts.js
@@ -1,10 +1,0 @@
-const router = require("express").Router();
-const contactsController = require("../controllers/contacts");
-
-router.get("/", contactsController.getAll);
-router.get("/:id", contactsController.getSingle);
-router.post("/", contactsController.createContact);
-router.put("/:id", contactsController.updateContact);
-router.delete("/:id", contactsController.deleteContact);
-
-module.exports = router;
